0.3.1
Redone function code.
Cleaned up verbose C Code.
Started code output optimization.
Cleaned up verbose C Code.
Cleaned up verbose C Code for functions.
Cleaned up string slicing code op.
Fixed paramaters.
Fixed ${#foo}.
Redone some examples.
Added variable default eg ST=noxfer;STATUS=${STATUS:-"$ST"}.
Added file tests efdhxrw, and negate (!).
Done read.
Fixed assigning curses escape codes to variables.
Added $#.
Fixed splitting lines on 'do'.

0.3.0
Added -5/--use-qt5 to compile with qt5 instead of qt6 ( the default ).
Added -c/--full-compile switch to compile script and compile final application.
Added --syntax-check/-s switch to check syntax, will use shellcheck if installed.
Done case/esac.
Fixed 'exit' with no exit code.
Added "done < /path/to/file" to while read;do...;done.
Done simple 'here' doc.
Done ${foo,,} and ${foo^^}.
Done for ((x=0;x<n;x=x+n)).
Fixed more escapes.
Code clean.
Fixed proccess substitution that doesn't return a trailing newline.
Done redirect to file/pipe for echo.
Done importing BASH environment variables at startup.
Done 'Exit'.
Removed ">=" and "<=" from string tests, ( not available in BASH ).
Fixed "!=" in test;
Fixed # not 1st character in line.
Fixed breaking line on ';'.
Added '-n' option to echo.
Started rewrite and clean.

0.2.0
Quoted variables when feeding external commands to while read loop.
Done printf ( optional -v to set variable ).
Added access to $0-$9 as global args to app.
Done pushd/popd.
Done returning values from functions (eg : xx=$(makePage1) ).
Done functions.
Cleaned/compacted generated code for while read.
Done while read.
Fixed do/done/fi/else
Done while.
Done ${string#substring}/${string##substring}/${string%substring}/${string%%substring}.
Fixed $?.
Moved to qhash to hold variables
Fixed quotes in process substitution.
Done ${string:position:len} Extract substring from $string at $position with.